# Distributed-Failure-Intelligence-Observability-System-for-Metaflow-on-Kubernetes

./: README.md  architecture.md  pyproject.toml  sample_report.json  trace_TEST-DAG.json
metaflow_debug/: __init__.py
metaflow_debug/analyzer/: anomaly.py  classifier.py  inference.py
metaflow_debug/cli/: main.py
metaflow_debug/core/: models.py
metaflow_debug/correlator/: timeline.py  tracing.py
metaflow_debug/ingestion/: simulator.py
metaflow_debug/reporter/: formatters.py
